fixed issue were background would overlap with actual calculator app

--- a/style.css
+++ b/style.css
@@ -24,24 +24,27 @@ a {
     place-items: center;
 }
 
-.calculator {
-    position:absolute;
+div.calculator.dark {
+    background-color: white;
+    box-shadow:.0.0.30px black;position: relative;
     height: auto;
-    width: auto;
-    padding: 28px;
-    border-radius: 10px;
-    box-shadow:.0.0.30px black;
-}
-
-table {
-    position: relative;
-    height:auto ;
     width: auto;
     padding: 20px;
     border: 10px;
     box-shadow: 0 0 30px black;
     background-color: linear-gradient(blue);
     border-radius: 10px;
+    background-image: linear-gradient(to bottom right, rgba(79,51,176,1), rgba(210, 51,176,1),rgb(210,53,165));
+}
+
+
+.calculator{
+    position:absolute;
+    height: auto;
+    width: auto;
+    padding: 28px;
+    border-radius: 10px;
+    
 }
 
 .theme-toggle {
@@ -58,7 +61,7 @@ table {
 }
 
 .theme-toggle.active::before {
-    background-color: whitesmoke;
+    background-color: white;
 }
 
 .theme-toggle::before {
@@ -82,7 +85,9 @@ table {
     align-items: flex-end;
     justify-content: flex-end;
     font-size: 30px;
+    margin-bottom: 20px;
     overflow-x: scroll;
+    background: black;
 }
 
 #display::-webkit-scrollbar {
